--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#"><span>A</span>lvian</a>
       </div>
       <div class="nav-toggler">
-
+        <span></span>
       </div>
       <ul class="nav">
         <li><a href="index.html" class="active"><i class="fa fa-home"></i> Home</a></li>
@@ -36,13 +36,14 @@
         <li><a href="#services"><i class="fa fa-list"></i> Services</a></li>
         <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
+        <p>© Copyright 2025 Alvian Dixsy.</p>
       </ul>
     </div>
     <!---  ===== Aside End ===== -->
     <!---  ===== Main Content Start ===== -->
     <div class="main-content">
       <!---  ===== Home Section Start ===== -->
-      <section class="home section" id="home">
+      <section class="home active section" id="home">
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
@@ -50,7 +51,7 @@
               <h3 class="my-profession">Saya <span class="typing">Web Designer</span></h3>
               <p>Saya adalah seorang Web Designer dengan memiliki ketrampilan dalam pembuatan UI/UX Design & Frontend
                 Development..</p>
-              <a href="https://api.whatsapp.com/send?phone=6282325054448" class="btn hire-me">Hubungi Saya</a>
+              <a href="https://api.whatsapp.com/send?phone=6282325054448" class="btn">Hubungi Saya</a>
             </div>
             <div class="home-img padd-15">
               <img src="assets/22_01_4864.jpg" alt="" style="width: 330px">
@@ -109,8 +110,7 @@
                   <div class="row">
                     <div class="buttons padd-15">
                       <a href="https://www.canva.com/design/DAGN0MlvBes/VR_AYtOQlO0-AEjAhMNqpQ/edit?utm_content=DAGN0MlvBes&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
-                        class="btn">Download CV</a>
-                      <a href="https://api.whatsapp.com/send?phone=6282325054448" class="btn hire-me">Hire Me</a>
+                        class="btn download-cv" data-section-index="1">Download CV</a>
                     </div>
                   </div>
                 </div>
@@ -480,6 +480,7 @@
   </div>
   <!---  ===== Style Switcher End ===== -->
   <!---  ===== JS FILE ===== -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
   <script src="js/style-switcher.js"></script>
 </body>
