--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Alvian Portfolio</title>
   <link href="assets/22_01_4864.jpg" rel="icon">
   <!-- ===== CSS Section ===== -->
   <link rel="stylesheet" href="style.css">
@@ -31,11 +31,11 @@
         <span></span>
       </div>
       <ul class="nav">
-        <li><a href="index.html" class="active"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
-        <li><a href="#services"><i class="fa fa-list"></i> Services</a></li>
-        <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-        <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
+        <li><a href="index.html" class="active"><i class="fa fa-home"></i> Beranda</a></li>
+        <li><a href="#about"><i class="fa fa-user"></i> Tentang Kami</a></li>
+        <li><a href="#services"><i class="fa fa-list"></i> Keahlian</a></li>
+        <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio Kami</a></li>
+        <li><a href="#contact"><i class="fa fa-comments"></i> Kontak Kami</a></li>
         <p>© Copyright 2025 Alvian Dixsy.</p>
       </ul>
     </div>
@@ -73,10 +73,9 @@
               <div class="row">
                 <div class="about-text padd-15">
                   <h3>Saya Alvian Putra Dixsy dan <span>Web Development</span></h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Distinctio nostrum, ipsa voluptas eius doloribus
-                    minima placeat et dicta non dolorem incidunt est aspernatur fugiat vero cupiditate sit,
-                    asperiores inventore accusamus.</p>
+                  <p>Halo perkenalkan semua, saya Alvian Putra Dixsy mahasiswa semester akhir dari 
+                    Universitas Amikom Yogyakarta dengan jurusan D3 Teknik Informatika. 
+                    Saat memiliki keahlian di bidang web development dengan skill front end developer dan web designer</p>
                 </div>
               </div>
               <div class="row">
@@ -98,7 +97,7 @@
                       <p>Kota : <span>Yogyakarta</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Website : <span>idem</span></p>
+                      <p>Website : <span class="">Ada</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Email : <span>alfiandixsy@gmail.com</span></p>
@@ -222,9 +221,9 @@
                   <i class="fa fa-mobile-alt"></i>
                 </div>
                 <h4>Web Design</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque hic rem neque fugit! Eum, odit
-                  ducimus! Fugit odit inventore exercitationem similique ea amet. Tempore hic suscipit tempora ducimus
-                  laborum soluta!</p>
+                <p>Keahlian utama saya adalah web designer dengan membangun ui/ux dan mendasin tampain ui pada frontenend
+                  website dengan menggunakan figma, dan bahasa pemrograman html,css,js, dan framework js bernama angular.
+                </p>
               </div>
             </div>
             <!-- ===== Service Item End ===== -->
@@ -234,10 +233,9 @@
                 <div class="icon">
                   <i class="fa fa-laptop-code"></i>
                 </div>
-                <h4>Web Design</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque hic rem neque fugit! Eum, odit
-                  ducimus! Fugit odit inventore exercitationem similique ea amet. Tempore hic suscipit tempora ducimus
-                  laborum soluta!</p>
+                <h4>Programmer</h4>
+                <p>Keahlian saya tidak hanya pada web designer tetapi juga programmer dalam membangun website 
+                  di bidang front end developer dengan menggunakan bahasa pemrograman html, css, js dan juga tech stack angular.</p>
               </div>
             </div>
             <!-- ===== Service Item End ===== -->
@@ -247,23 +245,9 @@
                 <div class="icon">
                   <i class="fa fa-palette"></i>
                 </div>
-                <h4>Web Design</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque hic rem neque fugit! Eum, odit
-                  ducimus! Fugit odit inventore exercitationem similique ea amet. Tempore hic suscipit tempora ducimus
-                  laborum soluta!</p>
-              </div>
-            </div>
-            <!-- ===== Service Item End ===== -->
-            <!-- ===== Service Item Start ===== -->
-            <div class="service-item padd-15">
-              <div class="service-item-inner">
-                <div class="icon">
-                  <i class="fa fa-code"></i>
-                </div>
-                <h4>Web Design</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque hic rem neque fugit! Eum, odit
-                  ducimus! Fugit odit inventore exercitationem similique ea amet. Tempore hic suscipit tempora ducimus
-                  laborum soluta!</p>
+                <h4>Desain Grafis</h4>
+                <p>Desain grafis juga menjadi keahlian saya diluar bidang pemrograman dengan membangun konsep dan ide dengan menggambar 
+                  apa yg saya imajinasikan dengan menggunakan software corel draw dan adobe ai/illustrator.</p>
               </div>
             </div>
             <!-- ===== Service Item End ===== -->
@@ -273,23 +257,8 @@
                 <div class="icon">
                   <i class="fa fa-search"></i>
                 </div>
-                <h4>Web Design</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque hic rem neque fugit! Eum, odit
-                  ducimus! Fugit odit inventore exercitationem similique ea amet. Tempore hic suscipit tempora ducimus
-                  laborum soluta!</p>
-              </div>
-            </div>
-            <!-- ===== Service Item End ===== -->
-            <!-- ===== Service Item Start ===== -->
-            <div class="service-item padd-15">
-              <div class="service-item-inner">
-                <div class="icon">
-                  <i class="fa fa-bullhorn"></i>
-                </div>
-                <h4>Web Design</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque hic rem neque fugit! Eum, odit
-                  ducimus! Fugit odit inventore exercitationem similique ea amet. Tempore hic suscipit tempora ducimus
-                  laborum soluta!</p>
+                <h4>Mencari Referensi/Inspirasi</h4>
+                <p>Saya juga suka mencari berbagai referensi atau isnpirasi terkait dengan pemnbuatan projek desain grafis, editing video, pemrograman, dan masih banyak lagi.</p>
               </div>
             </div>
             <!-- ===== Service Item End ===== -->
